--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="D:/Repository/org/apache/xmlbeans/xmlbeans/2.3.0/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="D:/Repository/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="D:/桌面文档/jar/Access_JDBC30.jar"/>
+	<classpathentry kind="lib" path="D:/桌面文档/jar/fastjson-1.2.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
